SunSkycodepkg/objects/SunSky_Build_Component__c.object
<CustomObject>
    <description>Build Components include all applicable capabilities and build elements defined for a solution.  Requirements may have several build components related to them.</description>
    <fields>
        <fullName>Build_Component_Description__c</fullName>
        <description>The description of the component to build for the related requirement.</description>
        <label>Build Component Description</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Build_Component_Status__c</fullName>
        <description>Track the progress of completing the build component from definition to deployment.</description>
        <label>Build Component Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <color>#999999</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Defined/Designed</fullName>
                <color>#FF99FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Build In Progress</fullName>
                <color>#CC66CC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Ready For Testing</fullName>
                <color>#993399</color>
            </picklistValues>
            <picklistValues>
                <fullName>Unit Testing</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>User Acceptance Testing</fullName>
                <color>#FFCC66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Testing Completed</fullName>
                <color>#33FF33</color>
            </picklistValues>
            <picklistValues>
                <fullName>Ready For Deployment</fullName>
                <color>#33CC00</color>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled For Release</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
                <color>#000000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Build_Component_Type__c</fullName>
        <description>The type of component to build related to the requirement.</description>
        <label>Build Component Type</label>
        <picklist>
            <picklistValues>
                <fullName>3rd Party Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Test Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approvals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Articles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Teams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Console</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTI Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Report Types</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Setting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Tab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SunSky_Release_Mgmt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The release the build component will be deployed in.</description>
        <label>SunSky Release Mgmt</label>
        <referenceTo>SunSky_Release__c</referenceTo>
        <relationshipName>SunSky_Build_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SunSky_Requirement__c</fullName>
        <description>The requirement the build component is related to.</description>
        <label>SunSky Requirement</label>
        <referenceTo>SunSky_Requirement__c</referenceTo>
        <relationshipName>SunSky_Build_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Est_Hours_Functional__c</fullName>
        <description>Estimated functional hours to complete the build component.</description>
        <label>Est Hours- Functional</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Hours_Technical__c</fullName>
        <description>Estimated technical hours to complete the build component.</description>
        <label>Est Hours- Technical</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Part_of_Release__c</fullName>
        <description>Checks to see if this Build Component is associated with a Release.  This field is used for certain reports, and is not on the page layout.</description>
        <formula>IF( ISBLANK( SunSky_Release_Mgmt__c ) , &quot;No&quot;, &quot;Yes&quot;)</formula>
        <label>Part of Release?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Defects__c</fullName>
        <description>Total of all defects reported related to the build component.</description>
        <label>Total Defects</label>
        <summaryForeignKey>SunSky_Defects__c.SunSky_Build_Component__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Tool Build Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SunSky_Requirement__c</columns>
        <columns>Build_Component_Description__c</columns>
        <columns>Build_Component_Status__c</columns>
        <columns>Build_Component_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Est_Hours_Functional__c</columns>
        <columns>Est_Hours_Technical__c</columns>
        <columns>Total_Defects__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Ready_For_Deployment</fullName>
        <columns>NAME</columns>
        <columns>SunSky_Requirement__c</columns>
        <columns>Build_Component_Description__c</columns>
        <columns>Build_Component_Status__c</columns>
        <columns>Build_Component_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Est_Hours_Functional__c</columns>
        <columns>Est_Hours_Technical__c</columns>
        <columns>Total_Defects__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Build_Component_Status__c</field>
            <operation>equals</operation>
            <value>Ready For Deployment</value>
        </filters>
        <label>Ready For Deployment</label>
    </listViews>
    <nameField>
        <displayFormat>BLD-{000000}</displayFormat>
        <label>Tool Build Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tool Build Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>